--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
   "name": "windy-radix-palette",
-  "version": "0.0.1",
-  "description": "Bring Radix Colors to TailwindCSS",
+  "version": "0.1.0",
+  "description": "Bring Radix Colors to Tailwind CSS",
   "main": "index.js",
   "repository": "https://github.com/brattonross/windy-radix-palette",
   "publishConfig": {
     "access": "public"
   },
   "keywords": [
-    "tailwind",
     "tailwindcss",
     "preset"
   ],
+  "files": [
+    "index.js",
+    "colors.js",
+    "*.css"
+  ],
   "author": "Ross Bratton <bratton.ross@gmail.com>",
   "license": "MIT",
-  "prettier": "@brattonross/prettier-config",
+  "scripts": {
+    "prepublishOnly": "pnpm build",
+    "build": "node ./generate.js",
+    "clean": "run-p clean:*",
+    "clean:css": "rimraf ./*.css",
+    "clean:js": "rimraf ./{index,colors}.js",
+    "format": "prettier --write './*.js'"
+  },
   "dependencies": {
-    "@radix-ui/colors": "^0.1.7"
+    "@radix-ui/colors": "^0.1.8"
   },
   "devDependencies": {
-    "@brattonross/prettier-config": "^0.1.0",
-    "prettier": "^2.4.1"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2"
   }
 }
