--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "clean:js": "rimraf ./{index,colors}.js",
     "format": "prettier --write './*.js'"
   },
-  "dependencies": {
-    "@radix-ui/colors": "^0.1.8"
-  },
   "devDependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2"
