--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "MIT",
   "scripts": {
     "prepublishOnly": "pnpm build",
-    "build": "node ./generate.js",
+    "build": "tsx ./generate.js",
+    "dev": "tsx watch ./generate.js",
     "clean": "run-p clean:*",
     "clean:css": "rimraf ./*.css",
     "clean:js": "rimraf ./{index,colors}.js",
@@ -30,6 +31,7 @@
     "@radix-ui/colors": "^0.1.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tsx": "^3.8.0"
   }
 }
