--- a/docs/package.json
+++ b/docs/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^0.2.5",
-    "astro": "^1.0.0-rc.7",
+    "@astrojs/tailwind": "^1.0.0",
+    "astro": "^1.0.5",
+    "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
     "windy-radix-palette": "workspace:*"
   }
