--- a/docs/package.json
+++ b/docs/package.json
@@ -10,10 +10,15 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@astrojs/react": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "astro": "^1.0.5",
     "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "windy-radix-palette": "workspace:*"
   }
 }
