--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "importsNotUsedAsValues": "error",
     "isolatedModules": true,
     "jsx": "react",
     "module": "ESNext",
     "moduleResolution": "node",
     "noEmit": true,
+    "paths": {
+      "~/*": ["./src/*"]
+    },
     "resolveJsonModule": true,
     "strict": true,
     "target": "ESNext"
