--- a/docs/package.json
+++ b/docs/package.json
@@ -9,13 +9,17 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "dependencies": {
+    "clsx": "^1.2.1"
+  },
   "devDependencies": {
     "@astrojs/react": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
     "@radix-ui/colors": "^0.1.8",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "astro": "^1.0.8",
+    "astro": "^1.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "windy-radix-palette": "workspace:*"
