refactor: move palette to packages directory

--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "url": "https://github.com/brattonross/windy-radix-palette",
-    "directory": "palette"
+    "directory": "packages/palette"
   },
   "publishConfig": {
     "access": "public"
