--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "clean": "turbo run clean",
     "format": "prettier --write './**/*.{js,cjs,mjs,ts,tsx,md,astro}'"
   },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "tailwindcss"
+      ]
+    }
+  },
   "devDependencies": {
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.3",
