--- a/docs/package.json
+++ b/docs/package.json
@@ -19,9 +19,10 @@
     "@tailwindcss/typography": "^0.5.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "astro": "^1.1.0",
+    "astro": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "windy-radix-palette": "workspace:*"
+    "windy-radix-palette": "workspace:*",
+    "windy-radix-typography": "workspace:*"
   }
 }
