--- a/docs/package.json
+++ b/docs/package.json
@@ -10,16 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.11.1",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
-    "@astrojs/react": "^1.1.0",
-    "@astrojs/tailwind": "^1.0.0",
+    "@astrojs/react": "^1.1.3",
+    "@astrojs/tailwind": "^2.0.1",
     "@radix-ui/colors": "^0.1.8",
-    "@tailwindcss/typography": "^0.5.4",
-    "@types/react": "^18.0.17",
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "astro": "^1.1.1",
+    "astro": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "windy-radix-palette": "workspace:*",
