--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -3,6 +3,7 @@
 	"version": "0.2.0",
 	"description": "Bring Radix Colors to Tailwind Typography",
 	"main": "index.js",
+	"types": "index.d.ts",
 	"repository": {
 		"url": "https://github.com/brattonross/windy-radix-palette",
 		"directory": "packages/typography"
@@ -16,7 +17,8 @@
 		"radix-ui"
 	],
 	"files": [
-		"index.js"
+		"index.js",
+		"index.d.ts"
 	],
 	"author": "Ross Bratton <bratton.ross@gmail.com>",
 	"license": "MIT",
