--- a/docs/package.json
+++ b/docs/package.json
@@ -10,19 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.14.0",
-    "clsx": "^1.2.1"
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
-    "@astrojs/react": "^1.2.2",
-    "@astrojs/tailwind": "^2.1.3",
-    "@radix-ui/colors": "^0.1.8",
+    "@astrojs/starlight": "^0.9.0",
+    "@astrojs/starlight-tailwind": "^2.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "@radix-ui/colors": "^2.1.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "astro": "^1.9.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "astro": "^3.0.7",
+    "tailwindcss": "^3.3.3",
     "windy-radix-palette": "workspace:*",
     "windy-radix-typography": "workspace:*"
   }
