--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -1,9 +1,10 @@
 {
+	"$schema": "https://json.schemastore.org/package.json",
 	"name": "windy-radix-palette",
-	"version": "0.6.1",
+	"version": "0.7.0",
 	"description": "Bring Radix Colors to Tailwind CSS",
-	"main": "index.js",
-	"types": "index.d.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"repository": {
 		"url": "https://github.com/brattonross/windy-radix-palette",
 		"directory": "packages/palette"
@@ -11,25 +12,20 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"keywords": [
-		"tailwindcss",
-		"plugin",
-		"radix-ui"
-	],
-	"files": [
-		"index.js",
-		"index.d.ts",
-		"vars.js",
-		"vars.d.ts"
-	],
+	"keywords": ["tailwindcss", "plugin", "radix-ui"],
+	"files": ["dist"],
 	"author": "Ross Bratton <bratton.ross@gmail.com>",
 	"license": "MIT",
+	"scripts": {
+		"dev": "bun build ./src/index.ts --outdir dist --watch",
+		"build": "bun build ./src/index.ts --external @radix-ui/colors --external tailwindcss --outdir dist && tsc --project tsconfig.json"
+	},
 	"peerDependencies": {
-		"@radix-ui/colors": ">=0.1.0",
+		"@radix-ui/colors": ">=3.0.0-rc.4",
 		"tailwindcss": ">=3.0.0"
 	},
 	"devDependencies": {
-		"@radix-ui/colors": "^2.1.0",
+		"@radix-ui/colors": "3.0.0-rc.4",
 		"tailwindcss": "^3.3.3"
 	}
 }
