--- a/docs/package.json
+++ b/docs/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "docs",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "clsx": "^2.0.0"
-  },
-  "devDependencies": {
-    "@astrojs/starlight": "^0.9.0",
-    "@astrojs/starlight-tailwind": "^2.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@radix-ui/colors": "^2.1.0",
-    "@tailwindcss/typography": "^0.5.9",
-    "astro": "^3.0.7",
-    "tailwindcss": "^3.3.3",
-    "windy-radix-palette": "workspace:*",
-    "windy-radix-typography": "workspace:*"
-  }
+	"name": "docs",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"clsx": "^2.0.0"
+	},
+	"devDependencies": {
+		"@astrojs/starlight": "^0.9.1",
+		"@astrojs/starlight-tailwind": "^2.0.0",
+		"@astrojs/tailwind": "^5.0.0",
+		"@radix-ui/colors": "3.0.0-rc.4",
+		"@tailwindcss/typography": "^0.5.10",
+		"astro": "^3.1.0",
+		"tailwindcss": "^3.3.3",
+		"windy-radix-palette": "workspace:*",
+		"windy-radix-typography": "workspace:*"
+	}
 }
