--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -11,20 +11,14 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"keywords": [
-		"tailwindcss",
-		"plugin",
-		"radix-ui"
-	],
-	"files": [
-		"index.js",
-		"index.d.ts"
-	],
+	"keywords": ["tailwindcss", "plugin", "radix-ui"],
+	"files": ["index.js", "index.d.ts"],
 	"author": "Ross Bratton <bratton.ross@gmail.com>",
 	"license": "MIT",
 	"peerDependencies": {
 		"@tailwindcss/typography": ">=0.1.0",
-		"tailwindcss": ">=3.0.0"
+		"tailwindcss": ">=3.0.0",
+		"windy-radix-palette": ">=0.0.0"
 	},
 	"devDependencies": {
 		"tailwindcss": "^3.3.3"
