--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -21,11 +21,11 @@
 		"build": "bun build ./src/index.ts --external @radix-ui/colors --external tailwindcss --outdir dist && tsc --project tsconfig.json"
 	},
 	"peerDependencies": {
-		"@radix-ui/colors": ">=3.0.0-rc.4",
+		"@radix-ui/colors": ">=3.0.0",
 		"tailwindcss": ">=3.0.0"
 	},
 	"devDependencies": {
-		"@radix-ui/colors": "3.0.0-rc.5",
+		"@radix-ui/colors": "3.0.0",
 		"tailwindcss": "^3.3.3"
 	}
 }
