--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/package.json",
 	"name": "windy-radix-palette",
-	"version": "1.0.0-rc.1",
+	"version": "1.0.0",
 	"description": "Bring Radix Colors to Tailwind CSS",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
