--- a/docs/package.json
+++ b/docs/package.json
@@ -13,12 +13,12 @@
 		"clsx": "^2.0.0"
 	},
 	"devDependencies": {
-		"@astrojs/starlight": "^0.9.1",
+		"@astrojs/starlight": "^0.11.0",
 		"@astrojs/starlight-tailwind": "^2.0.0",
-		"@astrojs/tailwind": "^5.0.0",
-		"@radix-ui/colors": "3.0.0-rc.4",
+		"@astrojs/tailwind": "^5.0.1",
+		"@radix-ui/colors": "3.0.0",
 		"@tailwindcss/typography": "^0.5.10",
-		"astro": "^3.1.0",
+		"astro": "^3.2.3",
 		"tailwindcss": "^3.3.3",
 		"windy-radix-palette": "workspace:*",
 		"windy-radix-typography": "workspace:*"
