--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
 		"allowSyntheticDefaultImports": true,
 		"downlevelIteration": true,
 		"forceConsistentCasingInFileNames": true,
-		"lib": ["esnext"],
+		"lib": [
+			"esnext"
+		],
 		"module": "esnext",
 		"moduleDetection": "force",
 		"moduleResolution": "bundler",
@@ -13,7 +15,6 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "esnext",
-		"types": ["bun-types"],
 		"verbatimModuleSyntax": true
 	}
 }
