--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
 	"scripts": {
 		"build": "turbo build",
 		"dev": "turbo dev",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"sherif": "sherif"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.2.2",
 		"prettier": "^3.0.3",
 		"prettier-plugin-astro": "^0.12.0",
 		"prettier-plugin-tailwindcss": "^0.5.5",
+		"sherif": "^0.3.1",
 		"turbo": "^1.10.15",
 		"typescript": "^5.2.2"
 	}
