--- a/packages/palette/tsconfig.json
+++ b/packages/palette/tsconfig.json
@@ -5,6 +5,9 @@
 		"declaration": true,
 		"emitDeclarationOnly": true,
 		"noEmit": false,
-		"outDir": "dist"
+		"outDir": "dist",
+		"types": [
+			"vitest/importMeta"
+		]
 	}
 }
