--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -23,8 +23,8 @@
 	"author": "Ross Bratton <bratton.ross@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "bun build ./src/index.ts --outdir dist --watch",
-		"build": "bun build ./src/index.ts --external @radix-ui/colors --external tailwindcss --outdir dist && tsc --project tsconfig.json",
+		"dev": "tsup ./src/index.ts --clean --dts --watch",
+		"build": "tsup ./src/index.ts --clean --dts --external @radix-ui/colors --external tailwindcss",
 		"test": "vitest"
 	},
 	"peerDependencies": {
@@ -34,6 +34,7 @@
 	"devDependencies": {
 		"@radix-ui/colors": "3.0.0",
 		"tailwindcss": "^3.3.3",
+		"tsup": "^7.2.0",
 		"vite": "^4.4.11",
 		"vitest": "^0.34.6"
 	}
