--- a/docs/package.json
+++ b/docs/package.json
@@ -10,12 +10,17 @@
 		"astro": "astro"
 	},
 	"devDependencies": {
-		"@astrojs/tailwind": "^5.0.1",
+		"@astrojs/mdx": "^1.1.2",
+		"@astrojs/tailwind": "^5.0.2",
 		"@radix-ui/colors": "3.0.0",
 		"@tailwindcss/typography": "^0.5.10",
-		"astro": "^3.2.3",
+		"astro": "^3.3.0",
 		"tailwindcss": "^3.3.3",
 		"windy-radix-palette": "workspace:*",
 		"windy-radix-typography": "workspace:*"
+	},
+	"dependencies": {
+		"@astrojs/node": "^6.0.3",
+		"htmx.org": "^1.9.6"
 	}
 }
