--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -1,9 +1,8 @@
 {
+	"$schema": "https://json.schemastore.org/package.json",
 	"name": "windy-radix-typography",
 	"version": "0.2.1",
 	"description": "Bring Radix Colors to Tailwind Typography",
-	"main": "index.js",
-	"types": "index.d.ts",
 	"repository": {
 		"url": "https://github.com/brattonross/windy-radix-palette",
 		"directory": "packages/typography"
@@ -16,18 +15,38 @@
 		"plugin",
 		"radix-ui"
 	],
-	"files": [
-		"index.js",
-		"index.d.ts"
-	],
 	"author": "Ross Bratton <bratton.ross@gmail.com>",
 	"license": "MIT",
+	"files": [
+		"dist"
+	],
+	"exports": {
+		".": {
+			"import": {
+				"types": "./dist/index.d.mts",
+				"default": "./dist/index.mjs"
+			},
+			"require": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			}
+		}
+	},
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"scripts": {
+		"dev": "tsup --watch",
+		"build": "tsup"
+	},
 	"peerDependencies": {
+		"@radix-ui/colors": ">=3.0.0",
 		"@tailwindcss/typography": ">=0.1.0",
 		"tailwindcss": ">=3.0.0",
-		"windy-radix-palette": ">=0.0.0"
+		"windy-radix-palette": ">=2.0.0-beta.2"
 	},
 	"devDependencies": {
-		"tailwindcss": "^3.3.3"
+		"@radix-ui/colors": "3.0.0",
+		"tailwindcss": "^3.3.3",
+		"tsup": "^7.2.0"
 	}
 }
