--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/package.json",
 	"name": "windy-radix-typography",
-	"version": "0.2.1",
+	"version": "1.0.0-beta.0",
 	"description": "Bring Radix Colors to Tailwind Typography",
 	"repository": {
 		"url": "https://github.com/brattonross/windy-radix-palette",
