--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,10 @@
 		"preview": "astro preview",
 		"astro": "astro"
 	},
+	"dependencies": {
+		"@astrojs/vercel": "^5.0.2",
+		"htmx.org": "^1.9.6"
+	},
 	"devDependencies": {
 		"@astrojs/mdx": "^1.1.2",
 		"@astrojs/tailwind": "^5.0.2",
@@ -18,9 +22,5 @@
 		"tailwindcss": "^3.3.3",
 		"windy-radix-palette": "workspace:*",
 		"windy-radix-typography": "workspace:*"
-	},
-	"dependencies": {
-		"@astrojs/node": "^6.0.3",
-		"htmx.org": "^1.9.6"
 	}
 }
