--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -39,6 +39,9 @@
 		"build": "tsup",
 		"test": "vitest"
 	},
+	"dependencies": {
+		"@paralleldrive/cuid2": "^2.2.2"
+	},
 	"peerDependencies": {
 		"@radix-ui/colors": ">=3.0.0",
 		"tailwindcss": ">=3.0.0"
